implement parallel fetch implementation for tiemseries. Gets rid of capnproto requirement
